--- a/HTML/Testes/index.html
+++ b/HTML/Testes/index.html
@@ -2,11 +2,5 @@
 <meta charset = "UTF-8">
 <head></head>
 <body>
-<script src = "/JavaScript/teste.js"></script>
-<h1></h1>
+<script src = "/solo/teste.js"></script>
 </body>
-
-<button onclick="verificarChute()" class="button">Console</button>
-<button onclick="alerta()" class="button">Alert</button>
-<button onclick="cidade()" class="button">Prompt</button>
-<button onclick="soma()" class="button">Soma</button>
